--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="40dp"
-        android:src="@drawable/ic_edit"
-        android:text="Crear tarea">
+        android:src="@drawable/ic_edit">
 
 
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
